Bruk nyeste coroutines versjon. Unngår at gammel versjon av coroutines dras inn ved å oppgradere kotlin-stdlib også